# NGine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  app  cmake_install.cmake  imgui.ini  main.cpp
include/: Actor.hpp  Application.hpp  AudioDB.h  Component.h  ComponentDB.hpp  ComponentManager.h  Engine.hpp  EventSystem.h  GameObject.h  GameObjectDB.h  Gui.h  Input.h  LightComponent.h  Mesh.h  Model.h  ReadJSON.h  Renderer.h  SceneDB.hpp  Shader.h  TemplateDB.hpp  TextDB.h
include/Shapes/: Cube.h  Plane.h  Sphere.h
include/assimp/: revision.h
include/glad/: glad.h
resources/: game.config  rendering.config
resources/actor_templates/: john.template
resources/component_types/: cube.lua  new.lua  new_comp.lua
resources/scenes/: basic.scene
shaders/fragment/: fragment.glsl  triangle.frag
shaders/vertex/: vertex.glsl
src/: AudioDB.cpp  Component.cpp  ComponentDB.cpp  ComponentManager.cpp  Cube.cpp  Engine.cpp  EventSystem.cpp  GameObject.cpp  GameObjectDB.cpp  Gui.cpp  Input.cpp  LightComponent.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  SceneDB.cpp  Shader.cpp  TextDB.cpp  main.cpp
